Fixed some styling with mobile view on ios

--- a/styles.css
+++ b/styles.css
@@ -297,17 +297,20 @@ input[type=submit] {
 
 #results {
   flex-direction: column;
-  padding-bottom: 45px;
+  margin: 0em;
+  padding-bottom: 01.5em;
 }
 
 .songContainer {
   border-radius: 0px;
   flex-flow: row;
-  height: 60px;
+  flex: 0 0 5%;
+  height: 100%;
+  /*height: 5em;*/
   justify-content: space-between;
-  margin: 0;
-  margin-bottom: 10px;
-  padding: 0px 5px;
+  margin: 0px;
+  margin-bottom: 0.5em;
+  padding: 2.2em 0.3em;
 }
 
 img {
